--- a/public/cadastro_receita.html
+++ b/public/cadastro_receita.html
@@ -101,6 +101,6 @@
   </footer>
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
-  <script src="js/cadastro.js"></script>
+  <script src="cadastro.js"></script>
 </body>
 </html>
