--- a/public/cadastro_receita.html
+++ b/public/cadastro_receita.html
@@ -23,12 +23,29 @@
     .btn-primary {
       background-color: #ff6f00;
       border-color: #ff6f00;
+      padding: 10px 25px;
+      font-weight: 600;
+      border-radius: 30px;
     }
     .btn-primary:hover {
       background-color: #e65100;
       border-color: #e65100;
     }
-  </style>
+    .form-control {
+      border-radius: 8px;
+      padding: 10px 15px;
+    }
+    .form-control:focus {
+      border-color: #ff6f00;
+      box-shadow: 0 0 0 0.25rem rgba(255, 111, 0, 0.25);
+    }
+    .navbar {
+      background-color: #ff6f00;
+    }
+    .navbar-brand, .nav-link {
+      color: white !important;
+    }
+</style>
 </head>
 <body>
   <nav class="navbar navbar-expand-lg"></nav>
@@ -69,6 +86,22 @@
           <label for="conteudo" class="form-label">Modo de Preparo</label>
           <textarea class="form-control" id="conteudo" rows="5" required></textarea>
         </div>
+
+        <div class="row">
+  <div class="col-md-6 mb-3">
+    <label for="categoria" class="form-label">Categoria</label>
+    <select class="form-select" id="categoria">
+      <option value="Salgado">Salgado</option>
+      <option value="Doce">Doce</option>
+      <option value="Bebida">Bebida</option>
+      <option value="Outro">Outro</option>
+    </select>
+  </div>
+  <div class="col-md-6 mb-3">
+    <label for="tempoPreparo" class="form-label">Tempo de Preparo (minutos)</label>
+    <input type="number" class="form-control" id="tempoPreparo" min="1">
+  </div>
+</div>
         
         <div class="mb-3">
           <label for="dica" class="form-label">Dica (opcional)</label>
@@ -88,6 +121,7 @@
   </footer>
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
-  <script src="cadastro.js"></script>
+<script src="cadastro.js"></script>
+<script src="app.js"></script>
 </body>
 </html>
